--- a/template.css
+++ b/template.css
@@ -1,3 +1,7 @@
 body  {
     background: url("images/icon_MarxanConnect_bg.png") no-repeat fixed center;
 }
+
+.navbar-nav > li > a {padding-top:30px !important; padding-bottom:30px !important;}
+.navbar {min-height:60px !important}
+.navbar {font-size: 1.2em !important}
